# R-Type

./: .clang-format  .gitignore  AComponentStorage_8hpp_source.html  AEntitiesManager_8hpp_source.html  CMakeLists.txt  ClientEntitiesManager_8hpp_source.html  ComponentManager_8hpp_source.html  ComponentStorage_8hpp_source.html  Components_8hpp_source.html  Coordinator_8hpp_source.html  Doxyfile  ECS_8hpp_source.html  EntitiesManager_8hpp_source.html  EntityManager_8hpp_source.html  Menus_8hpp_source.html  NetworkComponent_8hpp_source.html  NetworkSystems_8hpp_source.html  Network_8hpp_source.html  Readme.md  ServerEntitiesManager_8hpp_source.html  ShadersManager_8hpp_source.html  StageLoader_8hpp_source.html  SystemManager_8hpp_source.html  System_8hpp_source.html  Systems_8hpp_source.html  TexturesManager_8hpp_source.html  Types_8hpp_source.html  annotated.html  annotated_dup.js  classAComponentStorage-members.html  classAComponentStorage.html  classAComponentStorage.js  classAComponentStorage__inherit__graph.map  classAComponentStorage__inherit__graph.md5  classAEntitiesManager-members.html  classAEntitiesManager.html  classAEntitiesManager.js  classAEntitiesManager__inherit__graph.map  classAEntitiesManager__inherit__graph.md5  classClientNetworkSystem-members.html  (+185 more)
.github/workflows/: docs.yaml
ECS/: CMakeLists.txt
ECS/includes/: ComponentStorage.hpp  Coordinator.hpp  DefaultComponents.hpp  ECS.hpp  EntityManager.hpp  Logger.hpp  Network.hpp  System.hpp  SystemManager.hpp  Types.hpp
Network/includes/: Network.hpp  NetworkComponent.hpp  NetworkComponents.hpp  NetworkSystems.hpp
Network/src/: network.cpp
RType/client/: CMakeLists.txt  build_linux.sh  build_windows.sh  win_build_windows.sh
RType/client/assets/shaders/: achromatopsia.frag  deuteranopia.frag  normal.frag  protanopia.frag  tritanopia.frag
RType/client/includes/: ClientEntitiesManager.hpp  Components.hpp  EntitiesManager.hpp  Menus.hpp  ShadersManager.hpp  Systems.hpp  TexturesManager.hpp  client.hpp
RType/client/includes/Menus/: ButtonWidget.hpp  IWidget.hpp  KeyBindingWidget.hpp  LabelWidget.hpp  MenuManager.hpp  MenuPage.hpp  Settings.hpp  SliderWidget.hpp  UIStyle.hpp
RType/client/includes/Menus/Widgets/: ButtonWidget.hpp  KeyBindingWidget.hpp  LabelWidget.hpp  SliderWidget.hpp
RType/client/includes/Systems/: BackgroundScrollSystem.hpp  ClientManageNetworkSystem.hpp  ClientNetwork.hpp  ClientRelatives.hpp  EnemiesRelatives.hpp  Generics.hpp  InterpolationSystem.hpp  NetworkClientSystem.hpp  SpriteRelatives.hpp
RType/client/src/: clientManageNetworkSystem.cpp  clientManagerNetworkSystem.cpp  init.cpp  main.cpp  menus.cpp  utils.cpp
RType/server/: CMakeLists.txt  build_linux.sh  build_windows.sh  win_build_windows.sh
RType/server/includes/: EntitiesManager.hpp  ServerEntitiesManager.hpp  StageLoader.hpp  Systems.hpp  server.hpp
RType/server/includes/Systems/: CollisionSystem.hpp  CoreSystem.hpp  ServerManageNetworkSystem.hpp  ServerMangeNetworkSystem.hpp  ServerNetworkSystem.hpp
RType/server/src/: init.cpp  main.cpp  serverManageNetworkSystem.cpp
RType/shared/: CMakeLists.txt
RType/shared/includes/: AEntitiesManager.hpp  MovementsManager.hpp  StageLoader.hpp
RType/shared/includes/Components/: EnemiesComponents.hpp  GameComponents.hpp
RType/shared/includes/Systems/: CollisionSystem.hpp  EnemiesSystem.hpp  Game.hpp  StageLoaderSystem.hpp  VelocitySystem.hpp
RType/shared/stages/: stage1.json
docs/: comparative_study.md  dev_docs.md  protocol_client_server.md
html/html/: md_Readme.html  pages.html
latex/: annotated.tex  classAComponentStorage.tex  classAComponentStorage__inherit__graph.md5  classAEntitiesManager.tex  classAEntitiesManager__inherit__graph.md5  classClientNetworkSystem.tex  classClientNetworkSystem__inherit__graph.md5  classClientSystem.tex  classClientSystem__inherit__graph.md5  classComponentManager.tex  classComponentStorage.tex  classComponentStorage__coll__graph.md5  classCoordinator.tex  classEntitiesManager.tex  classEntitiesManager__inherit__graph.md5  classEntityManager.tex  classNetworkSystem.tex  classNetworkSystem__coll__graph.md5  classNetworkSystem__inherit__graph.md5  classServerEntitiesManager.tex  classServerEntitiesManager__inherit__graph.md5  classServerNetworkSystem.tex  classServerNetworkSystem__coll__graph.md5  classServerNetworkSystem__inherit__graph.md5  classServerSystem.tex  classServerSystem__inherit__graph.md5  classShadersManager.tex  classStageLoader.tex  classSystem.tex  classSystemManager.tex  classSystem__inherit__graph.md5  classTexturesManager.tex  group__my__docs.tex  hierarchy.tex  index.tex  md_Readme.tex  md_docs_comparative_study.tex  md_docs_dev_docs.tex  md_docs_protocol_client_server.tex  modules.tex  (+14 more)
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  groups_0.js  pages_0.js  pages_1.js  pages_2.js  (+2 more)
